[package]
name = "meowdict"
version = "0.6.7"
authors = ["eatradish <sakiiily@aosc.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
owo-colors = "2"
console = "0.14"
indexmap = { version = "1.6", features = ["serde-1"] }
rustyline = "9.0"
opencc-rust = "=1.1.6"
tokio = {version = "1.7", features = ["rt-multi-thread", "rt", "time"]}
futures = "0.3"
