[package]
name = "meowdict"
version = "0.8.2-alpha.0"
authors = ["eatradish <sakiiily@aosc.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
owo-colors = "3"
console = "0.15"
indexmap = { version = "1.6", features = ["serde-1"] }
rustyline = "9.0"
opencc-rust = "1.1.9"
tokio = {version = "1.7", features = ["rt-multi-thread", "rt", "time", "macros"]}
futures = "0.3"
dirs-next = "2.0"
toml = "0.5"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.2"

[features]
default = ["reqwest/default-tls"]
static-opencc = ["opencc-rust/static-dictionaries"]
rust-tls = ["reqwest/rustls-tls"]
