[package]
name = "meowdict"
version = "0.10.5"
authors = ["eatradish <sakiiily@aosc.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1"
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
owo-colors = "3"
console = "0.15"
indexmap = { version = "1.9", features = ["serde-1"] }
rustyline = "11.0"
opencc-rust = "1.1.14"
tokio = {version = "1.26", features = ["rt-multi-thread", "rt", "time", "macros"]}
futures = "0.3"
dirs-next = "2.0"
toml = "0.7"
lazy_static = "1.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3.4"

[features]
default = ["reqwest/default-tls"]
static-opencc = ["opencc-rust/static-dictionaries"]
rust-tls = ["reqwest/rustls-tls"]
